--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,6 +1,6 @@
 nav.nav.footer-menu.fixed-bottom.bg-primary.d-lg-none.w-100.nav-justified
-  = link_to events_path, {class: "nav-item nav-link"} do
+  = link_to users_path, {class: "nav-item nav-link"} do
     .text-center
       i.bi.bi-pencil
     .text-center
-      = t('events.index.title')
+      = t('users.index.title')
