--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,13 +1,187 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+h1 {
+    position: relative;
+    /*相対位置*/
+    padding: 0.5em 0.5em 0.5em 1.5em;
+    /*アイコン分のスペース*/
+    line-height: 1.4;
+    /*行高*/
+    color: #ff6a6a;
+    /*文字色*/
+    border-top: dotted 1px gray;
+    border-bottom: dotted 1px gray;
+    background: #fffff4;
 }
 
-*/
+h1:before {
+    font-family: "Font Awesome 6 Free";
+    /*忘れずに*/
+    content: "\f138";
+    /*アイコンのユニコード*/
+    font-weight: 900;
+    position: absolute;
+    /*絶対位置*/
+    font-size: 1em;
+    /*サイズ*/
+    left: 0.25em;
+    /*アイコンの位置*/
+    top: 0.5em;
+    /*アイコンの位置*/
+    color: #ff6a6a;
+    /*アイコン色*/
+}
+
+h2 {
+    position: relative;
+    /*相対位置*/
+    line-height: 1.4;
+    /*行高*/
+    display: inline-block;
+}
+
+h2:before,
+h2:after {
+    position: relative;
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    display: inline-block;
+    font-size: 1.0em;
+    color: #ff6a6a;
+}
+
+h2:before {
+    content: "\f053";
+    /*アイコン種類*/
+    padding-right: 0.5em
+}
+
+h2:after {
+    content: "\f054";
+    /*アイコン種類*/
+    padding-left: 0.5em
+}
+
+h3 {
+    position: relative;/*相対位置*/
+    padding-left: 1.2em;/*アイコン分のスペース*/
+    line-height: 1.4;/*行高*/
+}
+
+h3:before {
+    font-family: "Font Awesome 5 Free";
+    content: "\f075";/*アイコンのユニコード*/
+    font-weight: 900;
+    position: absolute;/*絶対位置*/
+    font-size: 1em;/*サイズ*/
+    left: 0;/*アイコンの位置*/
+    top: 0;/*アイコンの位置*/
+    color: #5ab9ff; /*アイコン色*/
+}
+
+hr {
+    border-width: 3px 0 0 0;
+    border-style: dashed;
+    border-color: #ff6a6a;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+abbr {
+    color: red;
+}
+
+.input {
+    height: auto;
+}
+
+img.thumb {
+    width: 4rem;
+    height: 4rem;
+}
+
+img.thumb-lg {
+    width: 8rem;
+    height: 8rem;
+}
+
+.menu-btn>i {
+    display: inline-block;
+    padding: 12px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.menu-btn>i:hover {
+    background-color: #f3f4f6;
+}
+
+.nav-content {
+    background-color: white;
+    width: 50%;
+    max-width: 450px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 50;
+    padding: 8px;
+    overflow: auto;
+    transform: translateX(100%);
+    transition-duration: 300ms;
+}
+
+.nav-menu ul {
+    list-style: none;
+    text-align: left;
+}
+
+.nav-menu li>a {
+    text-decoration: none;
+    color: black;
+    padding: 12px;
+    display: block;
+}
+
+.nav-menu li>a:hover {
+    background-color: #f3f4f6;
+}
+
+.nav-close {
+    display: none;
+    background-color: black;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 40;
+    transition-duration: 300ms;
+}
+
+#menu-checkbox {
+    display: none;
+}
+
+#menu-checkbox:checked~.nav-close {
+    display: block;
+    opacity: 0.5;
+}
+
+#menu-checkbox:checked~.nav-content {
+    transform: translateX(0%);
+}
+
+header {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+main {
+    padding-top: 65px;
+}
