--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -3,39 +3,35 @@ header
     .flex-1
       = link_to Settings.system[:title], root_path, class: "btn btn-ghost normal-case text-xl"
     .hidden.sm:flex
-      ul.menu.menu-horizontal.px-1.z-10
-        li tabindex="0"
-          = link_to t('menu.list'), '#', class: "link link-hover"
-          ul.p-2.bg-base-100
-            li
-              = link_to t('menu.user'), users_path, class: "link link-hover"
-        .sm:hidden.lg:flex
-          li
-            = link_to t('menu.static_pages.info'), static_pages_info_path, class: "link link-hover"
-          li
-            = link_to t('menu.static_pages.privacy'), static_pages_privacy_path, class: "link link-hover"
-          li
-            = link_to t('menu.static_pages.terms'), static_pages_terms_path, class: "link link-hover"
-          li
-            = link_to t('menu.static_pages.faq'), static_pages_faq_path, class: "link link-hover"
-        li.md:flex.lg:hidden tabindex="0"
-          = link_to t('menu.static_pages.info'), static_pages_info_path, class: "link link-hover"
-          ul.p-2.bg-base-100
-            li
-              = link_to t('menu.static_pages.privacy'), static_pages_privacy_path, class: "link link-hover"
-            li
-              = link_to t('menu.static_pages.terms'), static_pages_terms_path, class: "link link-hover"
-            li
-              = link_to t('menu.static_pages.faq'), static_pages_faq_path, class: "link link-hover"
-        - if login?
-          li tabindex="0"
-            = link_to '#', class: "link link-hover py-0"
-              = image_tag current_user.image || "default.png", title: "#{current_user.display_name}さん", class: "rounded-full w-10"
-            ul.p-2.bg-base-100.right-0
+      ul.menu.menu-horizontal.px-1
+        li.p-2.bg-base-100
+          details
+            summary
+              = t('menu.list')
+            ul.p-2.bg-base-100.rounded-t-none
               li
-                = link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "link link-hover"
+                = link_to t('menu.user'), users_path, class: "link link-hover"
+        li.p-2.bg-base-100
+          details
+            summary
+              = t('menu.static_pages.info')
+            ul.p-2.bg-base-100.rounded-t-none
+              li
+                = link_to t('menu.static_pages.privacy'), static_pages_privacy_path, class: "link link-hover"
+              li
+                = link_to t('menu.static_pages.terms'), static_pages_terms_path, class: "link link-hover"
+              li
+                = link_to t('menu.static_pages.faq'), static_pages_faq_path, class: "link link-hover"
+        - if login?
+          li.p-2.bg-base-100
+            details
+              summary
+                = image_tag current_user.image || "default.png", title: "#{current_user.display_name}さん", class: "rounded-full w-10"
+              ul.p-2.bg-base-100.right-0
+                li
+                  = link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "link link-hover"
         - else
-          li tabindex="0"
+          li.p-2.bg-base-100
             = button_to "Twitterでログイン", user_twitter_omniauth_authorize_path, method: :post, data: {turbo: "false"}, class: "link link-hover"
     .flex.sm:hidden
       input#menu-checkbox type="checkbox"
