--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -8,6 +8,7 @@ footer.footer.p-10.bg-base-200.text-base-content
     span.footer-title
       = t('menu.list')
     = link_to t('menu.user'), users_path, class: "link link-hover"
+    = link_to t('menu.community'), communities_path, class: "link link-hover"
 
   div
     span.footer-title
