コミュニティを追加

--- a/app/views/communities/_community.html.slim
+++ b/app/views/communities/_community.html.slim
@@ -1,7 +1,7 @@
 div id="#{dom_id community}"
   p
-    strong User:
-    =< community.user_id
+    strong Owner:
+    =< community.owner_id
   p
     strong Name:
     =< community.name
