--- a/app/views/communities/edit.html.slim
+++ b/app/views/communities/edit.html.slim
@@ -1,10 +1,3 @@
-h1 Editing community
+h1 = t('.title')
 
 == render "form", community: @community
-
-br
-
-div
-  => link_to "Show this community", @community
-  '|
-  =< link_to "Back to communities", communities_path
