--- a/app/views/communities/new.html.slim
+++ b/app/views/communities/new.html.slim
@@ -1,8 +1,3 @@
-h1 New community
+h1 = t('.title')
 
 == render "form", community: @community
-
-br
-
-div
-  = link_to "Back to communities", communities_path
