--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -2,9 +2,11 @@ p style="color: green" = notice
 
 == render @user
 
-div
-  => link_to "Edit this user", edit_user_path(@user)
-  '|
-  =< link_to "Back to users", users_path
+== render partial: 'shared/child_list', locals: { children: @user.communities }
 
-  = button_to "Destroy this user", @user, method: :delete
+.flex.flex-row.p-2
+  - if policy(@user).edit?
+    .p-1
+      = link_to t('btn.edit'), edit_user_path(@user), class: "btn btn-primary rounded-md"
+    .p-1
+      = button_to t('btn.destroy'), @user, method: :delete, form: { data: { turbo_confirm: t('confirm.destroy') } }, class: "btn btn-warning rounded-md"
