--- a/app/views/communities/_form.html.slim
+++ b/app/views/communities/_form.html.slim
@@ -6,6 +6,7 @@
     = f.association :owner, as: :hidden
     = f.input :name, input_html: {class: "input w-full input-bordered rounded-md"}
     = f.input :url, input_html: {class: "input w-full input-bordered rounded-md"}
+    = f.input :icon, as: :file, input_html: {class: "file-input file-input-bordered rounded-md max-w-xs"}
     = f.input :comment, input_html: {class: "input w-full input-bordered rounded-md"}
 
   .form-actions.flex.flex-row.p-2
