--- a/app/views/shared/_child_list.html.slim
+++ b/app/views/shared/_child_list.html.slim
@@ -3,5 +3,11 @@
     .grid.grid-cols-2.gap-y-10.gap-x-6.sm:grid-cols-4.lg:grid-cols-6.xl:grid-cols-8.xl:gap-x-8
       - children.each do |child|
         = link_to child, class: "group"
+          .aspect-w-1.aspect-h-1.w-full.overflow-hidden.rounded-lg.bg-gray-200.xl:aspect-w-7.xl:aspect-h-8
+            - image = child.random_image
+            - if image.present?
+              = image_tag image.url, {alt: child.name, class: "h-full w-full object-cover object-center group-hover:opacity-75"}
+            - else
+              = image_tag "default.png"
           h3.mt-4.text-sm.text-gray-700
             = child.name
