--- a/app/views/user_strengths/_form.html.slim
+++ b/app/views/user_strengths/_form.html.slim
@@ -4,6 +4,6 @@
     = form.hidden_field :id
     = form.hidden_field :user_id, value: current_user.id
     = form.label :no
-    = form.select :no, 1..34
-    = form.collection_select :strength_id, Strength.all, :id, :name
+    = form.select :no, 1..34, {}, class: "input input-bordered rounded-md"
+    = form.collection_select :strength_id, Strength.all, :id, :name, {},  class: "input input-bordered rounded-md"
     = link_to t('btn.destroy'), user_strength_path(form.object.id||0), data: { turbo_method: :delete, turbo_confirm: t('confirm.destroy'), turbo: true, turbo_stream: true}, class: "btn btn-warning rounded-md"
